k8s/network-of-terms/network-of-terms-graphql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-of-terms-graphql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: network-of-terms-graphql
  template:
    metadata:
      labels:
        app: network-of-terms-graphql
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/network-of-terms-graphql
          ports:
            - containerPort: 3123
      imagePullSecrets:
        - name: ghcr
