k8s/network-of-terms/network-of-terms-reconciliation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-of-terms-reconciliation
spec:
  replicas: 2
  selector:
    matchLabels:
      app: network-of-terms-reconciliation
  template:
    metadata:
      labels:
        app: network-of-terms-reconciliation
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/network-of-terms-reconciliation
          ports:
            - containerPort: 3123
          readinessProbe:
            httpGet:
              path: /reconcile
              port: 3123
      imagePullSecrets:
        - name: ghcr
