k8s/network-of-terms/network-of-terms-graphql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: network-of-terms-graphql
spec:
  ports:
    - port: 80
      targetPort: 3123
  selector:
    app: network-of-terms-graphql
